--- a/src/screens/ClarifionUpsell/style.css
+++ b/src/screens/ClarifionUpsell/style.css
@@ -95,7 +95,6 @@ button {
   align-items: center;
   gap: 10px;
   width: 100%;
-  padding: 16px 64px;
   display: flex;
   position: relative;
   border: none;
@@ -169,17 +168,23 @@ button {
 .clarifion-upsell .content {
   background-color: #f9f9f9;
   border-radius: 10px;
-  padding: 4% 20% 0% 20%;
+  /* padding: 4% 40px 0% 40px; */
   overflow: hidden;
   height: 100%;
   display: flex;
   width: -moz-fit-content;
   width: fit-content;
+  justify-content: center;
 }
 .clarifion-upsell .content > div {
   padding: 1% 10px 0% 2%;
+  width: 40%;
 }
 
+.clarifion-upsell .content > div > img {
+  padding: 1% 10px 0% 2%;
+  width: 100%;
+}
 .clarifion-upsell .image {
   height: 591px;
   left: 40px;
@@ -823,11 +828,10 @@ button {
 .clarifion-upsell .steps {
   align-items: center;
   display: flex;
-  justify-content: space-between;
-
-  top: 271px;
-  width: -moz-fit-content;
-  width: fit-content;
+  justify-content: space-around;
+  padding: 1% 0% 1% 0%;
+  width: 100%;
+  width: webkit-fit-content;
 }
 
 .clarifion-upsell .frame-26 {
@@ -883,14 +887,15 @@ button {
 
 .clarifion-upsell .text-wrapper-15 {
   color: #ffffff;
+  height: 100%;
   font-family: "Manrope", Helvetica;
   font-size: 20px;
   font-weight: 400;
-  left: 14px;
   letter-spacing: 0;
   line-height: 22px;
-  position: absolute;
-  top: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   white-space: nowrap;
 }
 
@@ -921,35 +926,71 @@ button {
   font-family: "Manrope", Helvetica;
   font-size: 20px;
   font-weight: 400;
-  left: 12px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 100%;
   letter-spacing: 0;
   line-height: 22px;
-  top: 11px;
+
   white-space: nowrap;
 }
 /* Media queries for responsiveness */
 
 @media (max-width: 768px) {
+  .clarifion-upsell .content > div {
+    padding: 1% 10px 0% 2%;
+    width: 100%;
+  }
   .USPS {
     display: none;
   }
   .clarifion-upsell {
     flex-direction: column;
   }
-
-  .USPS {
-    flex-direction: column;
+  .overlap > .frame {
+    padding: 2% 3%;
   }
   .content {
     height: auto;
     flex-direction: column;
-    padding: 4% 0% 0% 0%;
-  }
-  .frame-19 {
-    display: none;
+    padding: 4% 0% 1% 0%;
   }
 
-  .clarifion-upsell .frame-26 {
+  .clarifion-upsell .content > div > .frame-19 {
+    display: none;
+  }
+  .clarifion-upsell > .frame-26 {
     flex-direction: column;
+  }
+  .frame-3 {
+    padding: 10px 0px 10px 0px;
+  }
+  .steps {
+    width: 100%;
+    justify-content: space-around;
+  }
+  .steps > .frame-26 {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .clarifion-upsell .footer {
+    flex-direction: column;
+    height: auto;
+  }
+  .clarifion-upsell .text-wrapper-14 {
+    text-align: center;
+    font-size: 12px;
+  }
+  .clarifion-upsell .text-wrapper-16 {
+    text-align: center;
+    font-size: 12px;
+  }
+  .clarifion-upsell .text-wrapper-14 > span {
+    display: none;
+  }
+  .clarifion-upsell .text-wrapper-16 > span {
+    display: none;
   }
 }
